--- a/css/styles.css
+++ b/css/styles.css
@@ -98,5 +98,33 @@ body {
     font-size: 2.9em;
 }
 
+.heading {
+    color: blue;
+    text-align: center;
+}
+
+.progress-bar-container {
+    height: 25px;
+    background-color: #e0e0e0;
+}
+
+.progress-bar {
+    width: 70%;
+    height: 25px;
+    background-color: #17a2b8; 
+}
+
+.sub-heading {
+    text-align: center;
+    margin-top: 10px;
+}
+
+
+footer{
+  background-color: #333; 
+  color: white; 
+  padding: 10px; 
+  text-align: center;}
+
 
     
